# ai-deepresearch-autoflow

./: .gitignore  .gitleaks.toml  COMMERCIAL-LICENSE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.demo.yml  docker-compose.tunnel.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
backend/app/: __about__.py  cli.py  config.py  main.py  settings.py
backend/app/api/: __init__.py  admin.py  auth.py  config.py  cookies.py  demo.py  deps.py  health.py  runs.py  schemas_api.py  setup.py
backend/app/core/: claims.py  contradictions.py  engine.py  events.py  planner.py  researcher.py  sources.py  synthesizer.py  verifier.py
backend/app/db/: __init__.py  database.py  repositories.py  (+1 more)
backend/tests/: conftest.py  sse_util.py  test_adapters.py  test_api_auth.py  test_api_cancel.py  test_api_config.py  test_api_config_templates.py  test_api_credentials.py  test_api_demo.py  test_api_google.py  test_api_health_about.py  test_api_i18n.py  test_api_plan_approval.py  test_api_reconnect_replay.py  test_api_runs_flow.py  test_api_setup.py  test_auth_service.py  test_claims.py  test_contradictions.py  test_crypto.py  test_db.py  test_demo_reset.py  test_engine_e2e.py  test_engine_v2_e2e.py  test_events.py  test_json_utils.py  test_jwt.py  test_mock_providers.py  test_oauth.py  test_passwords.py  test_planner.py  test_prompts.py  test_rbac.py  test_researcher.py  test_review_fixes.py  test_run_guards.py  test_schemas.py  test_security_hardening.py  test_settings.py  test_sources.py  (+4 more)
(+119 files in other folders)
