[project]
name = "autoflow-research"
version = "0.1.0"
description = "AutoFlow Research — provider-agnostic deep-research engine and API"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "litellm>=1.55",
    "tenacity>=9.0",
    "sse-starlette>=2.1",
    "ddgs>=9.0",
    "python-multipart>=0.0.12",
    "aiosqlite>=0.20",
    "cryptography>=43",
    "argon2-cffi>=23",
    "pyjwt>=2.9",
]

[project.optional-dependencies]
crawl = ["trafilatura>=1.12"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[project.scripts]
autoflow = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
